# BibouWatcher

./: Cargo.toml
src/: lib.rs  main.rs
src/gui/: bibougui.rs  mod.rs
src/oshandler/: handler.rs
